--- a/Presentation/UdemyCarBook.WebApi/Properties/launchSettings.json
+++ b/Presentation/UdemyCarBook.WebApi/Properties/launchSettings.json
@@ -11,13 +11,14 @@
       }
     },
     "https": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "https://localhost:7019;http://localhost:5128",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+        "commandName": "Project",
+        "dotnetRunMessages": true,
+        "launchBrowser": true,
+        "launchUrl": "swagger/index.html",
+        "applicationUrl": "https://localhost:7019;http://localhost:5128",
+        "environmentVariables": {
+            "ASPNETCORE_ENVIRONMENT": "Development"
+        }
     }
   }
 }
