132. Blog Kategori İşlemleri

--- a/Frontends/UdemyCarBook.WebUI/UdemyCarBook.WebUI.csproj
+++ b/Frontends/UdemyCarBook.WebUI/UdemyCarBook.WebUI.csproj
@@ -29,4 +29,11 @@
     <ProjectReference Include="..\UdemyCarBook.Dto\UdemyCarBook.Dto.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Areas\Admin\Views\_ViewImports.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
