--- a/Frontends/UdemyCarBook.WebUI/UdemyCarBook.WebUI.csproj
+++ b/Frontends/UdemyCarBook.WebUI/UdemyCarBook.WebUI.csproj
@@ -22,7 +22,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.7" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.12.1" />
   </ItemGroup>
 
   <ItemGroup>
